--- a/PR/pom.xml
+++ b/PR/pom.xml
@@ -163,6 +163,17 @@
 	    <artifactId>spring-security-config</artifactId>
 	    <version>4.1.0.RELEASE</version>
 		</dependency>
+		
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.7</version>
+    </dependency>
 		        
 	</dependencies>
     <build>
